
* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[v1.4.3]]
== 1.4.3 (TBD)

icon:plus[] Clustering: The `cluster.topologyLockTimeout` setting has been added. When set to a value greater than 0 a write lock will be applied to prevent write requests during cluster topology changes.

icon:check[] Clustering: The default value for the `vertxPort` setting has been changed to `4848`.

icon:plus[] Clustering: The coordinator layer feature has been added. The layer can be enabled to efficiently process REST requests in a multi-master and master-replica cluster setup.

More information can be found in the link:{{< relref "clustering.asciidoc" >}}#_coordination[Cluster coordination section].

icon:plus[] REST: The `/admin/shutdown` endpoint has been added. This allows users with admin privileges to shutdown the mesh process.

icon:plus[] REST: It is now possible to read and update the cluster configuration in runtime via the `/api/v2/admin/cluster/config` endpoint.

icon:check[] Docker: An issue with the docker building process has been fixed which caused an unnecessary layer to be added to the docker image.

[[v1.4.2]]
== 1.4.2 (24.02.2020)

icon:check[] UI: The Gentics Mesh UI has been updated to version link:https://github.com/gentics/mesh-ui/blob/1.1.1/CHANGELOG.md#111---2020-02-19[1.1.1]

icon:check[] Core: The storage filesystem compatibility check has been made more reliable.

icon:check[] Core: Fixed a bug that caused errors during microschema migrations in certain situations.

[[v1.4.1]]
== 1.4.1 (19.01.2020)

icon:plus[] Core: The core Vert.x library was updated to version `3.8.5`.

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.0.28`

icon:check[] Core: The handler for webroot updates is now running in a worker thread. This will prevent "Thread blocked" messages in the log.
